Minor bug fixed
- Remove the horizontal scroll bar in mobile device mode.
- Update the load order of some .js files.
- Change the search result template

--- a/css/default.css
+++ b/css/default.css
@@ -85,7 +85,7 @@ pre ol{margin-left:25px;list-style-type:decimal;}
 .entry ul li{margin-bottom:5px;list-style:disc;line-height:2.0em;}
 .entry ol{margin-bottom:25px;margin-left:25px;}
 .entry ol li{margin-bottom:5px;list-style:decimal;line-height:2.0em;}
-.entry blockquote{padding: 10px 10px;margin: 0 0 20px;font-size: 16px;border-left: 5px solid #eee}
+.entry blockquote{padding: 10px 10px;margin: 0 0 20px;font-size: 15px;border-left: 5px solid #eee}
 .entry blockquote p{margin-bottom: 0px;line-height: 1.5em;}
 .entry div#bq-about p{margin-bottom: 1.5em;line-height: 1.5em;margin-left: 0.8em;}
 .entry div#bq-about-edu p{margin-bottom: 0.5em;line-height: 1.5em;margin-left: 0.8em;}
@@ -208,7 +208,7 @@ h3.about {color:#777;margin-top:20px;font-size:22px;margin-bottom:10px}
   .entry {float:none;width:auto;background:transparent;padding:0;box-shadow:none;}
 
   .index-content .aside { position:relative; width:100%; height:300px; max-width:none; }
-  .index-content .section { margin-left:0; padding-right:0; }
+  .index-content .section { margin-left:0; padding-right:0; margin-right: 16px;}
   .index-content .section ul { width:85%; }
   .index-content .cate-bar { width:85%; }
   .index-content .artical-cate { margin-top:50px; }
@@ -220,6 +220,7 @@ h3.about {color:#777;margin-top:20px;font-size:22px;margin-bottom:10px}
   .col5 .aside {display:none;background-image:none;}
 
   nav button.search-btn-nav {height: 40px !important;line-height: 20px;}
+  a.navbar-brand.active {padding-left: 30px;}
   .modal-dialog {width: 90% !important;}
 }
 
